// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Board matches the snapshot 1`] = `
<StyledBoard>
  <Square
    area="square-0"
  />
  <Square
    area="square-1"
  />
  <Square
    area="square-2"
  />
  <Square
    area="square-3"
  />
  <Square
    area="square-4"
  />
  <Square
    area="square-5"
  />
  <Square
    area="square-6"
  />
  <Square
    area="square-7"
  />
  <Square
    area="square-8"
  />
</StyledBoard>
`;

exports[`Board matches the snapshots 1`] = `
.c1 {
  -webkit-align-self: stretch;
  -ms-flex-item-align: stretch;
  align-self: stretch;
  background-color: White;
  color: SlateBlue;
  cursor: pointer;
  font-size: 16vh;
  font-weight: bold;
  grid-area: square-0;
  justify-self: stretch;
  text-align: center;
  text-transform: uppercase;
}

.c2 {
  -webkit-align-self: stretch;
  -ms-flex-item-align: stretch;
  align-self: stretch;
  background-color: White;
  color: SlateBlue;
  cursor: pointer;
  font-size: 16vh;
  font-weight: bold;
  grid-area: square-1;
  justify-self: stretch;
  text-align: center;
  text-transform: uppercase;
}

.c3 {
  -webkit-align-self: stretch;
  -ms-flex-item-align: stretch;
  align-self: stretch;
  background-color: White;
  color: SlateBlue;
  cursor: pointer;
  font-size: 16vh;
  font-weight: bold;
  grid-area: square-2;
  justify-self: stretch;
  text-align: center;
  text-transform: uppercase;
}

.c4 {
  -webkit-align-self: stretch;
  -ms-flex-item-align: stretch;
  align-self: stretch;
  background-color: White;
  color: SlateBlue;
  cursor: pointer;
  font-size: 16vh;
  font-weight: bold;
  grid-area: square-3;
  justify-self: stretch;
  text-align: center;
  text-transform: uppercase;
}

.c5 {
  -webkit-align-self: stretch;
  -ms-flex-item-align: stretch;
  align-self: stretch;
  background-color: White;
  color: SlateBlue;
  cursor: pointer;
  font-size: 16vh;
  font-weight: bold;
  grid-area: square-4;
  justify-self: stretch;
  text-align: center;
  text-transform: uppercase;
}

.c6 {
  -webkit-align-self: stretch;
  -ms-flex-item-align: stretch;
  align-self: stretch;
  background-color: White;
  color: SlateBlue;
  cursor: pointer;
  font-size: 16vh;
  font-weight: bold;
  grid-area: square-5;
  justify-self: stretch;
  text-align: center;
  text-transform: uppercase;
}

.c7 {
  -webkit-align-self: stretch;
  -ms-flex-item-align: stretch;
  align-self: stretch;
  background-color: White;
  color: SlateBlue;
  cursor: pointer;
  font-size: 16vh;
  font-weight: bold;
  grid-area: square-6;
  justify-self: stretch;
  text-align: center;
  text-transform: uppercase;
}

.c8 {
  -webkit-align-self: stretch;
  -ms-flex-item-align: stretch;
  align-self: stretch;
  background-color: White;
  color: SlateBlue;
  cursor: pointer;
  font-size: 16vh;
  font-weight: bold;
  grid-area: square-7;
  justify-self: stretch;
  text-align: center;
  text-transform: uppercase;
}

.c9 {
  -webkit-align-self: stretch;
  -ms-flex-item-align: stretch;
  align-self: stretch;
  background-color: White;
  color: SlateBlue;
  cursor: pointer;
  font-size: 16vh;
  font-weight: bold;
  grid-area: square-8;
  justify-self: stretch;
  text-align: center;
  text-transform: uppercase;
}

.c0 {
  display: grid;
  grid-gap: 1px;
  background-color: Gray;
  grid-template-areas: "square-0 square-1 square-2" "square-3 square-4 square-5" "square-6 square-7 square-8";
  grid-template-rows: 20vh 20vh 20vh;
  grid-template-columns: 20vh 20vh 20vh;
  margin: 2vh auto;
  height: calc(60vh + 2px);
  width: calc(60vc + 2px);
}

<div
  className="c0"
>
  <span
    className="c1"
    onClick={[Function]}
  >
    
  </span>
  <span
    className="c2"
    onClick={[Function]}
  >
    
  </span>
  <span
    className="c3"
    onClick={[Function]}
  >
    
  </span>
  <span
    className="c4"
    onClick={[Function]}
  >
    
  </span>
  <span
    className="c5"
    onClick={[Function]}
  >
    
  </span>
  <span
    className="c6"
    onClick={[Function]}
  >
    
  </span>
  <span
    className="c7"
    onClick={[Function]}
  >
    
  </span>
  <span
    className="c8"
    onClick={[Function]}
  >
    
  </span>
  <span
    className="c9"
    onClick={[Function]}
  >
    
  </span>
</div>
`;

exports[`Board matches the snapshots 2`] = `
.c2 {
  -webkit-align-self: stretch;
  -ms-flex-item-align: stretch;
  align-self: stretch;
  background-color: White;
  color: SlateBlue;
  cursor: pointer;
  font-size: 16vh;
  font-weight: bold;
  grid-area: square-1;
  justify-self: stretch;
  text-align: center;
  text-transform: uppercase;
}

.c3 {
  -webkit-align-self: stretch;
  -ms-flex-item-align: stretch;
  align-self: stretch;
  background-color: White;
  color: SlateBlue;
  cursor: pointer;
  font-size: 16vh;
  font-weight: bold;
  grid-area: square-2;
  justify-self: stretch;
  text-align: center;
  text-transform: uppercase;
}

.c4 {
  -webkit-align-self: stretch;
  -ms-flex-item-align: stretch;
  align-self: stretch;
  background-color: White;
  color: SlateBlue;
  cursor: pointer;
  font-size: 16vh;
  font-weight: bold;
  grid-area: square-3;
  justify-self: stretch;
  text-align: center;
  text-transform: uppercase;
}

.c5 {
  -webkit-align-self: stretch;
  -ms-flex-item-align: stretch;
  align-self: stretch;
  background-color: White;
  color: SlateBlue;
  cursor: pointer;
  font-size: 16vh;
  font-weight: bold;
  grid-area: square-4;
  justify-self: stretch;
  text-align: center;
  text-transform: uppercase;
}

.c6 {
  -webkit-align-self: stretch;
  -ms-flex-item-align: stretch;
  align-self: stretch;
  background-color: White;
  color: SlateBlue;
  cursor: pointer;
  font-size: 16vh;
  font-weight: bold;
  grid-area: square-5;
  justify-self: stretch;
  text-align: center;
  text-transform: uppercase;
}

.c7 {
  -webkit-align-self: stretch;
  -ms-flex-item-align: stretch;
  align-self: stretch;
  background-color: White;
  color: SlateBlue;
  cursor: pointer;
  font-size: 16vh;
  font-weight: bold;
  grid-area: square-6;
  justify-self: stretch;
  text-align: center;
  text-transform: uppercase;
}

.c8 {
  -webkit-align-self: stretch;
  -ms-flex-item-align: stretch;
  align-self: stretch;
  background-color: White;
  color: SlateBlue;
  cursor: pointer;
  font-size: 16vh;
  font-weight: bold;
  grid-area: square-7;
  justify-self: stretch;
  text-align: center;
  text-transform: uppercase;
}

.c9 {
  -webkit-align-self: stretch;
  -ms-flex-item-align: stretch;
  align-self: stretch;
  background-color: White;
  color: SlateBlue;
  cursor: pointer;
  font-size: 16vh;
  font-weight: bold;
  grid-area: square-8;
  justify-self: stretch;
  text-align: center;
  text-transform: uppercase;
}

.c1 {
  -webkit-align-self: stretch;
  -ms-flex-item-align: stretch;
  align-self: stretch;
  background-color: White;
  color: Crimson;
  cursor: not-allowed;
  font-size: 16vh;
  font-weight: bold;
  grid-area: square-0;
  justify-self: stretch;
  text-align: center;
  text-transform: uppercase;
}

.c0 {
  display: grid;
  grid-gap: 1px;
  background-color: Gray;
  grid-template-areas: "square-0 square-1 square-2" "square-3 square-4 square-5" "square-6 square-7 square-8";
  grid-template-rows: 20vh 20vh 20vh;
  grid-template-columns: 20vh 20vh 20vh;
  margin: 2vh auto;
  height: calc(60vh + 2px);
  width: calc(60vc + 2px);
}

<div
  className="c0"
>
  <span
    className="c1"
  >
    x
  </span>
  <span
    className="c2"
    onClick={[Function]}
  >
    
  </span>
  <span
    className="c3"
    onClick={[Function]}
  >
    
  </span>
  <span
    className="c4"
    onClick={[Function]}
  >
    
  </span>
  <span
    className="c5"
    onClick={[Function]}
  >
    
  </span>
  <span
    className="c6"
    onClick={[Function]}
  >
    
  </span>
  <span
    className="c7"
    onClick={[Function]}
  >
    
  </span>
  <span
    className="c8"
    onClick={[Function]}
  >
    
  </span>
  <span
    className="c9"
    onClick={[Function]}
  >
    
  </span>
</div>
`;
